Fixed css floating 'to top' button was covering next page buttons

--- a/website/static/css/sb-admin.css
+++ b/website/static/css/sb-admin.css
@@ -25,7 +25,7 @@ body.fixed-nav {
 .scroll-to-top {
   position: fixed;
   right: 15px;
-  bottom: 3px;
+  bottom: 43px;
   display: none;
   width: 50px;
   height: 50px;
